--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# ignore Rider files
+.idea/
+
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
